--- a/task_3/css/comment.css
+++ b/task_3/css/comment.css
@@ -31,6 +31,11 @@ html{
 		font-size: 843.75%;
 	}
 }
+@media only screen and (min-width: 480px) {
+	html{
+		font-size: 937.5%;
+	}
+}
 html, body{
 	padding: 0;
 	margin: 0;
