--- a/task_5/css/comment.css
+++ b/task_5/css/comment.css
@@ -62,13 +62,14 @@ a{
 	padding: 0.1rem 0.2rem;
 	background-color: #fff;
 	color: var(--main-color);
-	border: 1px solid;
+	border: 1px solid var(--main-color);
 	border-radius: 0.05rem;
 	font-size: 0.14rem;
 }
 .btn-primary{
 	background-color: var(--main-color);
 	color: #fff;
+
 }
 /*btn end*/
 /*header start*/
@@ -162,19 +163,8 @@ a{
 	align-items: center;
 }
 .address{
-	display: flex;
-	align-items: center;
+	margin-left: 0.05rem;
 }
-.address:before{
-	content: '';
-	width: 0.1rem;
-	height: 0.128rem;
-	background: url(../images/task5-1_03.png);
-	background-size: 100%;
-	display: inline-block;
-	margin-right: 0.05rem;
-}
-
 
 ul{
 	padding: 0;
@@ -219,7 +209,7 @@ ul > li:last-child::after{
 	content: '';
 	display: inline-block;
 	height: 0.12rem;
-	width: 2px;
+	width: 3px;
 	background-color: var(--main-color);
 	position: relative;
 	left: 0;
