--- a/task_5/css/comment.css
+++ b/task_5/css/comment.css
@@ -219,10 +219,23 @@ ul > li:last-child::after{
 	color: #999;
 	white-space: nowrap;
 	line-height: 0.2rem;
+	display: flex;
+}
+.list-title:after{
+	content: '';
+	width: 1px;
+	height: 0.2rem;
+	background-color: #e1e5e7;
+	margin: 0 0.1rem;
+}
+.list-text{
+	text-align: justify;
 }
 
 .star-div{
 	margin-right: 0.2rem;
+	display: flex;
+	align-items: center;
 }
 .star-div::before{
 	content: '';
@@ -230,6 +243,5 @@ ul > li:last-child::after{
 	height: 0.12rem;
 	background: url(../images/task5-1_04.png);
 	background-size: 100%;
-	display: inline-block;
 	margin-right: 0.05rem;
 }
